<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="title_activity_main">Catch\'App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="next">TouchProcessingActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search_movies">Search Movies</string>
    <string name="title_activity_gpstracker">GPSTracker</string>
    <string name="title_activity_find_me">FindMe</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="title_activity_binding">BindingActivity</string>
    <string name="title_activity_passage">Passage</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_first_class">FirstClass</string>

    <string-array name="tabs">
        <item>TAB 1</item>
        <item>TAB 2</item>
        <item>TAB 3</item>
        <item>TAB 4</item>
        <item>TAB 5</item>
        <item>TAB 6</item>
    </string-array>

    <string name="title_activity_activity_using_tab_library">SlidingTabLayoutActivity</string>
    <string name="action_tabs_using_library">SlidingTabLayoutExample</string>
    <string name="title_activity_vector_test">VectorTestActivity</string>
    <string name="action_vector_test_activity">VectorTestActivity</string>
    <string name="error_timeout">Oops! Your Connection Timed Out</string>
    <string name="error_auth_failure">Oops! RottenTomatoes Says It Doesn\'t Recognize You</string>
    <string name="error_network">Oops! RottenTomatoes Server Just Messed Up</string>
    <string name="error_parser">Oops! Data Received Was An Unreadable Mess</string>
    <string name="title_activity_dynamic_tabs">Dynamic Tabs</string>
    <string name="add_tab">Add Tab</string>
    <string name="action_dynamic_tabs_activity">Dynamic Tabs</string>
    <string name="title_activity_recycler_item_animations">RecyclerItemAnimations
    </string>
    <string name="action_recycler_item_animations">RecyclerItemAnimator</string>
    <string name="action_add">+</string>
    <string name="action_remove">-</string>
    <string name="add_item">Add Item</string>
    <string name="title_activity_activity_calling">Content A</string>
    <string name="title_activity_activity_called">Content B</string>
    <string name="action_activity_calling">ContentTransitions</string>
    <string name="title_activity_activity_shared">Shared A</string>
    <string name="title_activity_activity_shared_b">Shared B</string>
    <string name="action_shared_transitions">SharedElementsTransition</string>
    <string name="app_name">Healthy</string>
   <string name="act_name">EnregistrementEtat</string>
    <string name="act_name2">TestPoulse</string>
    <string name="backache"> BACK-ACHE</string>
    <string name="headache"> HEAD-ACHE</string>
    <string name="chestache">CHEST-ACHE</string>
    <string name="Constipation">Constipation</string>
    <string name="Diahrea">Diarrhea</string>
    <string name="act_name3">Respiration</string>
    <string name="act_name4">Treatment</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps2">Map</string>

</resources>
