<?xml version="1.0" encoding="utf-8"?>
    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars = "vertical"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:gravity="top|center_vertical"
        android:orientation="vertical" >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Other Tests"
            android:textColor="@color/red"
            android:textSize="36dp"
            android:textStyle="bold|italic" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   VOMIT   :"
                android:textColor="@color/black"
                android:textSize="16dp" />

        <ImageButton
            android:id="@+id/cvomit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/caution" />

        <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            android:layout_gravity="center">

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/YES"
                    android:textColor="@color/black"
                    android:id="@+id/v1"
                    />

                <RadioButton
                    android:id="@+id/v2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NO"
                    android:textColor="@color/black" />
        </RadioGroup>
    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Temperature :  "
                android:textColor="@color/black"
                android:textSize="16dp" />



            <RadioGroup
                android:id="@+id/radioGroup6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HOT"
                    android:textColor="@color/black"
                    android:id="@+id/t1"
                    />

                <RadioButton
                    android:id="@+id/t2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Normal"
                    android:textColor="@color/black" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="73dp"
                android:layout_height="wrap_content"
                android:text="have you:"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageButton
                android:id="@+id/cdiah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/caution" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/d1"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Diahrea"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/d2"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Constipation"
                    android:textColor="@color/black" />
                <RadioButton
                    android:id="@+id/d3"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="None"
                    android:textColor="@color/black" />


            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Do you have :"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <CheckBox

                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/ache1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backache"
                android:textColor="@color/black"
                />

            <CheckBox
                android:id="@+id/ache2"

                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/headache"
                android:textColor="@color/black"

                />

            <CheckBox
                android:layout_gravity="center"
                android:id="@+id/ache3"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chestache"
                android:textColor="@color/black" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Dizziness:"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <ImageButton
            android:id="@+id/cdizzy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/caution" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <RadioButton
                android:id="@+id/di1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YES"
                android:textColor="@color/black"
                />

            <RadioButton
                android:id="@+id/di2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NO"
                android:textColor="@color/black" />
        </RadioGroup>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Insomnia:"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageButton
                android:id="@+id/cAnsomnia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/caution" />


            <RadioGroup
                android:id="@+id/radioGroup5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/i1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/YES"
                    android:textColor="@color/black"
                    />

                <RadioButton
                    android:id="@+id/i2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NO"
                    android:textColor="@color/black" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Fatigue :          "
                android:textColor="@color/black"
                android:textSize="16dp" />

            <RadioGroup

                android:id="@+id/radioGroup4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <RadioButton
                    android:id="@+id/f1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/YES"
                    android:textColor="@color/black"
                    />

                <RadioButton
                    android:id="@+id/f2"
                     android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NO"
                    android:textColor="@color/black" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10sp"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/annuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"

                android:text="Annuler"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/valider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Valider"
                android:layout_weight="1"/>


        </LinearLayout>

</LinearLayout>
</ScrollView>
